--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -6,19 +6,32 @@ repos:
       - id: trailing-whitespace
       - id: check-yaml
 
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: 'v0.8.6'
+    hooks:
+      - id: ruff
+        args: [ --fix, --exit-non-zero-on-fix ]
+      # Run the formatter
+      - id: ruff-format
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.43.0
     hooks:
       - id: markdownlint-fix
 
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.19.1
+    hooks:
+      - id: pyupgrade
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.30.0
     hooks:
+      - id: check-renovate
+        args: [ "--verbose" ]
+
       - id: check-github-workflows
         args: ["--verbose"]
-
 
   - repo: https://github.com/crate-ci/typos
     rev: v1.29.4
