--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.31.0
     hooks:
-      - id: check-renovate
+      - id: check-dependabot
         args: [ "--verbose" ]
 
       - id: check-github-workflows
