--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -4,7 +4,6 @@ repos:
     hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
-      - id: check-yaml
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: 'v0.9.1'
@@ -13,6 +12,7 @@ repos:
         args: [ --fix, --exit-non-zero-on-fix ]
       # Run the formatter
       - id: ruff-format
+        args: [ --verbose]
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.43.0
@@ -27,7 +27,7 @@ repos:
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.31.0
     hooks:
-      - id: check-renovate
+      - id: check-dependabot
         args: [ "--verbose" ]
 
       - id: check-github-workflows
