--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.43.0
     hooks:
-      - id: markdownlint-fix
+      - id: markdownlint
 
   - repo: https://github.com/crate-ci/typos
     rev: v1.29.4
