--- a/renovate.json
+++ b/renovate.json
@@ -3,8 +3,8 @@
   "extends": [
     "config:recommended"
   ],
+  "automerge": true,
   "pre-commit": {
-    "enabled": true,
-    "automerge": true
+    "enabled": true
   }
 }
