--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -44,3 +44,9 @@ jobs:
           git init -b main
           git add .
           git commit -m "Initial commit"
+
+      - name: Run the marimo flow
+        id: flow_marimo
+        working-directory: template
+        run: |
+          act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest
