--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -14,9 +14,19 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        shell: bash
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+
+      - name: "Set up Python"
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version-file: ".python-version"
+
+      #- name: Install uv
+      #  uses: astral-sh/setup-uv@v5
+      #  with:
+      #    python-version: '3.12'
 
       - name: Create virtual environment
         run: |
