testing Marimo flow

--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -20,11 +20,9 @@ jobs:
 
           # Add UV to PATH for the current shell session
           echo "$HOME/.local/bin" >> $GITHUB_PATH   # Add UV binary directory to PATH in GitHub Actions environment
-          export PATH="$HOME/.local/bin:$PATH"      # Add UV binary directory to PATH for the current shell session
-
-      - name: "Verify UV installation"
-        run: |
-          echo $GITHUB_PATH
+          #export PATH="$HOME/.local/bin:$PATH"      # Add UV binary directory to PATH for the current shell session
+          
+          # "Verify UV installation"
           uv --version  # Should print the installed version of UV
 
       - name: "Set up Python"
@@ -32,22 +30,11 @@ jobs:
         with:
           python-version: "3.12"
 
-      #- name: Install uv
-      #  uses: astral-sh/setup-uv@v5
-      #  with:
-      #    python-version: '3.12'
-
-      - name: Create virtual environment
+      - name: Create venv and install dependencies + marimo
         run: |
           uv venv
-
-      - name: Install dependencies with uv
-        run: |
           uv pip install --no-cache-dir  -r requirements.txt
-
-      - name: Install marimo
-        run: |
-          uv pip install --no-cache-dir  marimo
+          uv pip install --no-cache-dir marimo
 
       - name: Convert notebooks to HTML
         run: |
