--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -24,23 +24,24 @@ jobs:
         with:
           python-version: '3.12'
 
-      # Set Git user name and email for CI/CD
-      - name: Set Git user for CI/CD
-        run: |
-          git config --global user.email "ci@example.com"
-          git config --global user.name "CI User"
-
       - name: Install and run copier
         working-directory: .
         shell: bash
         run: |
           python -m pip install --upgrade pip
           pip install --no-cache-dir -r requirements.txt
-          mkdir -p template
+          # mkdir -p template
           copier copy . template --data-file .github/data.yaml
-          cd template
+
+      - name: Prepare the repo
+        working-directory: template
+        shell: bash
+        run: |
           # otherwise the pre-commit hooks won't "see" files
           # also act needs to have the commit in place
+          git config --global user.email "ci@example.com"
+          git config --global user.name "CI User"
+          
           git init -b main
           git add .
           git commit -m "Initial commit"
