--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -9,7 +9,11 @@ permissions:
 
 jobs:
   install:
+
     runs-on: ubuntu-latest
+    matrix:
+      python-version: [ '3.10', '3.12' ]
+
     steps:
       - uses: actions/checkout@v4
 
@@ -28,7 +32,7 @@ jobs:
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: ${{ matrix.python-version }}
 
       - name: Create venv and install dependencies + marimo
         run: |
