--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   test-template-workflows:
     runs-on: ubuntu-latest
+    matrix:
+      python-version: [ '3.10', '3.12' ]
+
     steps:
       - uses: actions/checkout@v4
 
@@ -22,7 +25,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: ${{ matrix.python-version }}
 
       - name: Install and run copier
         working-directory: .
