--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -9,10 +9,10 @@ permissions:
 
 jobs:
   install:
-
     runs-on: ubuntu-latest
-    matrix:
-      python-version: [ '3.10', '3.12' ]
+    strategy:
+      matrix:
+        python-version: [ '3.10', '3.12' ]
 
     steps:
       - uses: actions/checkout@v4
