--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -7,7 +7,7 @@ jobs:
   test-template-workflows:
     strategy:
       matrix:
-        python-version: [ '3.10', '3.12' ]
+        python-version: [ '3.12' ]
 
     runs-on: ubuntu-latest
 
