--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -54,6 +54,7 @@ jobs:
           done
 
       - name: Upload notebooks
+        if: ${{ !env.RUNNING_IN_ACT }}
         uses: actions/upload-artifact@v4
         with:
           name: pdoc
