testing Marimo flow

--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Check env variable
+        shell: bash
+        run: |
+          echo "ACT in marimo ${{ env.RUNNING_IN_ACT }}?"
+
       # This is not using any github-token:
       - name: Install uv
         shell: bash
