testing Marimo flow

--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -29,8 +29,7 @@ jobs:
 
           # "Verify UV installation"
           uv --version  # Should print the installed version of UV
-          echo "Environment variable for ACT: ${{ env.RUNNING_IN_ACT }}"
-          echo "******** Environment variable for ACT: ${{ RUNNING_IN_ACT }}"
+          echo "Environment variable for ACT: ${{ RUNNING_IN_ACT }}"
 
       - name: "Set up Python"
         uses: actions/setup-python@v5
