--- a/template/.github/workflows/pre-commit.yml
+++ b/template/.github/workflows/pre-commit.yml
@@ -10,6 +10,7 @@ jobs:
       - name: Checkout [${{ github.repository }}]
         uses: actions/checkout@v4
 
-      - uses: pre-commit/action@v3.0.1
+      - name: Apply all pre-commit hooks to all files
+        uses: pre-commit/action@v3.0.1
         with:
           extra_args: '--verbose --all-files'
