testing Marimo flow

--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -3,13 +3,8 @@ name: MARIMO
 on:
   push
 
-permissions:
-  checks: write
-  contents: read
-
 jobs:
-  install:
-
+  marimo2html:
     runs-on: "ubuntu-latest"
 
     strategy:
