--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -52,7 +52,7 @@ jobs:
           done
 
       - name: Upload notebooks
-        if: ${{ !RUNNING_IN_ACT }}
+        if: !$RUNNING_IN_ACT
         uses: actions/upload-artifact@v4
         with:
           name: pdoc
