--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -3,20 +3,23 @@ name: MARIMO
 on:
   push
 
-jobs:
-  marimo2html:
-    runs-on: "ubuntu-latest"
+permissions:
+  checks: write
+  contents: read
 
+jobs:
+  install:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ '3.10', '3.12' ]
+        python-version: [ '3.10', '3.11', '3.12', '3.13' ]
 
     steps:
-      - name: Checkout [${{ github.repository }}]
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       # This is not using any github-token:
       - name: Install uv
+        shell: bash
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
 
@@ -26,8 +29,8 @@ jobs:
 
           # "Verify UV installation"
           uv --version  # Should print the installed version of UV
-          echo "Environment variable for ACT: $RUNNING_IN_ACT"
 
+          echo "*** RUNNING IN ACE? $RUNNING_IN_ACT ***
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
@@ -51,10 +54,10 @@ jobs:
             fi
           done
 
-      - name: Upload notebooks
-        if: !$RUNNING_IN_ACT
-        uses: actions/upload-artifact@v4
-        with:
-          name: pdoc
-          path: ./html_exports
-          retention-days: 1
+      #- name: Upload notebooks
+      #  if: !$RUNNING_IN_ACT
+      #  uses: actions/upload-artifact@v4
+      #  with:
+      #    name: pdoc
+      #    path: ./html_exports
+      #    retention-days: 1
