--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -60,7 +60,7 @@ jobs:
         id: flow_marimo
         working-directory: template
         run: |
-          act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest
+          act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --env RUNNING_IN_ACE=true
         env:
           RUNNING_IN_ACT: true
 
@@ -70,5 +70,3 @@ jobs:
         working-directory: template
         run: |
           act -W .github/workflows/pre-commit.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest
-        env:
-          RUNNING_IN_ACT: true
