--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -60,9 +60,7 @@ jobs:
         id: flow_marimo
         working-directory: template
         run: |
-          act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --env RUNNING_IN_ACE=true
-        env:
-          RUNNING_IN_ACT: true
+          act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --env RUNNING_IN_ACT=true
 
       - name: Run the pre-commit flow
         id: flow_pre_commit
