testing Marimo flow

--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -30,7 +30,7 @@ jobs:
           # "Verify UV installation"
           uv --version  # Should print the installed version of UV
 
-          echo "*** RUNNING IN ACE? $RUNNING_IN_ACT ***"
+          echo "*** RUNNING IN ACT? $RUNNING_IN_ACT ***"
 
       - name: "Set up Python"
         uses: actions/setup-python@v5
@@ -55,10 +55,10 @@ jobs:
             fi
           done
 
-      #- name: Upload notebooks
-      #  if: !$RUNNING_IN_ACT
-      #  uses: actions/upload-artifact@v4
-      #  with:
-      #    name: pdoc
-      #    path: ./html_exports
-      #    retention-days: 1
+      - name: Upload notebooks
+        if: !$RUNNING_IN_ACT
+        uses: actions/upload-artifact@v4
+        with:
+          name: pdoc
+          path: ./html_exports
+          retention-days: 1
