--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -61,6 +61,8 @@ jobs:
         working-directory: template
         run: |
           act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --env RUNNING_IN_ACT=true
+        env:
+          RUNNING_IN_ACT: true
 
       - name: Run the pre-commit flow
         id: flow_pre_commit
