testing Marimo flow

--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -25,7 +25,8 @@ jobs:
           export PATH="$HOME/.local/bin:$PATH"
           uv --version
           echo "************ RUNNING IN ACT $RUNNING_IN_ACT ? ************"
-          echo "************ RUNNING IN ACT ${{env.RUNNING_IN_ACT}} ? ************"
+          echo "************ RUNNING IN ACT $RUNNING_IN_ACT ? ************"
+          echo "************ RUNNING IN ACT ${RUNNING_IN_ACT} ? ************"
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -47,7 +48,7 @@ jobs:
           ' sh {} \;
 
       - name: Upload notebooks
-        if: ${{ !env.RUNNING_IN_ACT2 }}
+        if: "$RUNNING_IN_ACT" != "true"
         uses: actions/upload-artifact@v4
         with:
           name: marimo-notebooks
