--- a/template/.github/workflows/marimo.yml
+++ b/template/.github/workflows/marimo.yml
@@ -57,10 +57,13 @@ jobs:
 #          fi
 
       # Skipping upload in act environment
-      - name: Skip artifact upload in act environment
-        if: ${{ env.ACT }}  # Skip if running in 'act'
-        run: echo "Skipping artifact upload in act environment"
+      #- name: Skip artifact upload in act environment
+      #  if: ${{ env.ACT }}  # Skip if running in 'act'
+      #  run: echo "Skipping artifact upload in act environment"
 
       - name: Upload if not environment
-        if: ${{ env.ACT != 'true' }}  # Skip if running in 'act'
-        run: echo "Upload"
+        if: ${{ env.ACT != true }}  # Skip if running in 'act'
+        uses: actions/upload-artifact@v3
+        with:
+          name: marimo-notebooks  # The name of the artifact
+          path: ./html_exports  # Path to the directory containing test artifacts
