testing Marimo flow (#20)
* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

* testing Marimo flow

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -20,6 +20,10 @@ jobs:
           # Add the installation directory to PATH
           echo "${{ github.workspace }}/bin" >> $GITHUB_PATH
 
+      #- name: Check env variable
+      #  run: |
+      #    echo "ACT ${{ env.RUNNING_IN_ACT }}?"
+
       - name: Verify act installation
         run: |
           act --version
@@ -56,7 +60,9 @@ jobs:
         id: flow_marimo
         working-directory: template
         run: |
-          act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest
+          act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --env ACT='true'
+        env:
+          ACT: 'true'
 
       - name: Run the pre-commit flow
         id: flow_pre_commit
