--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -40,12 +40,10 @@ jobs:
         working-directory: template
         run: |
           act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --env ACT='true'
-        #env:
-        #  ACT: 'true'
 
       - name: Run the pre-commit flow
         id: flow_pre_commit
         shell: bash
         working-directory: template
         run: |
-          act -W .github/workflows/pre-commit.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest
+          act -W .github/workflows/pre-commit.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --env ACT='true'
