--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install act
+        run: |
+          curl https://raw.githubusercontent.com/nektos/act/master/install.sh | sudo bash
+          # Add the installation directory to PATH
+          echo "${{ github.workspace }}/bin" >> $GITHUB_PATH
+          
       - name: Launch the cradle
         uses: cvxgrp/cradle/actions/cradle@main
         with:
