--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -47,14 +47,8 @@ jobs:
           working-directory: template
           workflow: marimo.yml
 
-        #id: flow_marimo
-        #working-directory: template
-        #run: |
-        #  act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --env ACT='true'
-
-      - name: Run the pre-commit flow
-        id: flow_pre_commit
-        shell: bash
-        working-directory: template
-        run: |
-          act -W .github/workflows/pre-commit.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --env ACT='true'
+      - name: Test pre-commit flow
+        uses: cvxgrp/cradle/actions/flow@main
+        with:
+          working-directory: template
+          workflow: pre-commit.yml
