--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install act
+        run: |
+          curl https://raw.githubusercontent.com/nektos/act/master/install.sh | sudo bash
+          # Add the installation directory to PATH
+          echo "${{ github.workspace }}/bin" >> $GITHUB_PATH
+
       - name: Launch the cradle
         uses: cvxgrp/cradle/actions/cradle@main
         with:
@@ -35,17 +41,14 @@ jobs:
           git add .
           git commit -m "Initial commit"
 
-      - name: Run the marimo flow
-        id: flow_marimo
-        working-directory: template
-        run: |
-          act -W .github/workflows/marimo.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --env ACT='true'
-        #env:
-        #  ACT: 'true'
+      - name: Test Marimo flow
+        uses: cvxgrp/cradle/actions/flow@main
+        with:
+          working-directory: template
+          workflow: marimo.yml
 
-      - name: Run the pre-commit flow
-        id: flow_pre_commit
-        shell: bash
-        working-directory: template
-        run: |
-          act -W .github/workflows/pre-commit.yml -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest
+      - name: Test pre-commit flow
+        uses: cvxgrp/cradle/actions/flow@main
+        with:
+          working-directory: template
+          workflow: pre-commit.yml
