--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,14 +13,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Get contributors
+        id: contributors
+        uses: crazy-max/ghaction-github-contributors@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          includeBot: false
+          includeCollaborators: true
+          includeContributors: true
+
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
+          body: |
+            ### Changelog
+            ${{ steps.tag_version.outputs.changelog }}
+
+            ### Contributors
+            ${{ steps.contributors.outputs.contributors }}
